# monitoring-prometheus

./: Procfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  deploy.yml
monitoring_prometheus/: entrypoint.py
rules/: cluebot3.yml  cluebotng-editsets.yml  cluebotng-report.yml  cluebotng-review.yml  cluebotng-trainer.yml  cluebotng.yml  internal.yml  toolforge.yml
scripts/: install.py
