[project]
name = "monitoring-prometheus"
version = "1.0"
requires-python = ">=3.14"
dependencies = [
    "PyYaml"
]

[tool.poetry.build]
generate-setup-file = false
script = "setup.py"

[tool.poetry.group.test.dependencies]
tox = "*"
tox-current-env = "*"
black = "*"
ruff = "*"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
